fixed dashboard not showing entire bottom line

--- a/public/styles.css
+++ b/public/styles.css
@@ -204,7 +204,7 @@ div.specificWindow--container {
 .appList--section {
   margin-top: 5%;
   width: 100%;
-  max-height: 90%;
+  max-height: 85%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
